1.0.0 2017-09-17
  - AutoPlugin compatible
  - sbt 1.x compatible