@@ -1,3 +1,0 @@
-# Testing war overlay creation
-
-> overlayWars
